WIP: index.html, fix spacing styles

--- a/assets/scss/components/product.scss
+++ b/assets/scss/components/product.scss
@@ -2,6 +2,7 @@
 
 .product-card {
     height: 100%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }   
 
 #vip_products {
